--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <br>
     <a href="https://fightforping.github.io/D3_Homework/Week2/D3-03-SVG-barChart.html" target="_new"> 向量圖SVG基礎與D3入門 - p24 迴圈長條圖 </a>
     <br>
-    <a href="" target="_self"> 向量圖SVG基礎與D3入門 - p26 迴圈折線圖 尚未進行 </a>
+    <a href="https://fightforping.github.io/D3_Homework/Week2/D3-03_LineChart.html" target="_new"> 向量圖SVG基礎與D3入門 - p26 迴圈折線圖 </a>
     
 <hr>
 
