--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <br>
     <a href="https://fightforping.github.io/D3_Homework/Week3/2d-Scatter-hw/2d-Scatter-hw.html" target="_new"> D3基礎(比例尺) - p36 2D散佈圖 無軸線版 </a>
 
+    
+<hr>
+<p> 專題-喜歡的作家 </p>
+<a href="https://fightforping.github.io/D3_Homework/Final/Partition%20Diagram.html" target="_new"> Partition Diagram 分區圖 </a>
 
 </body>
 </html>
