--- a/Final/Partition Diagram.html
+++ b/Final/Partition Diagram.html
@@ -13,7 +13,7 @@
 var w=800, h=600, p=50;
 
 //資料讀入
-var data=d3.csv("AboutMe.csv",mid,function(dataSet){
+var data=d3.csv("https://fightforping.github.io/D3_Homework/Final/AboutMe.csv",mid,function(dataSet){
 
     console.log(dataSet)
     
